Fix label alignment

--- a/binderhub/static/js/index.scss
+++ b/binderhub/static/js/index.scss
@@ -48,4 +48,8 @@ a {
   font-weight: bold;
 }
 
+.form-label {
+  font-size: 1rem;
+}
+
 @import "bootstrap-icons/font/bootstrap-icons.css";
